@@ -1,0 +1,97 @@
+package luckycoins.asm;
+
+import java.util.Arrays;
+import java.util.Map;
+
+import com.google.common.eventbus.EventBus;
+
+import luckycoins.Refs;
+import cpw.mods.fml.common.DummyModContainer;
+import cpw.mods.fml.common.LoadController;
+import cpw.mods.fml.common.ModMetadata;
+import cpw.mods.fml.relauncher.IFMLLoadingPlugin;
+
+public class ModContainerLuckyCoins extends DummyModContainer implements IFMLLoadingPlugin
+{
+	public static final String CLASS_ACCESS_TRANSFORMERS = "luckycoins.asm.AccessTransformers";
+	public static final String CLASS_MOD_CONTAINER = "luckycoins.asm.ModContainerLuckyCoins";
+	public static final String REF_MOD_ID = Refs.MOD_ID + "Core";
+	public static final String REF_MOD_NAME = "CoreMod: " + Refs.MOD_NAME;
+	public static final String REF_VERSION = Refs.VERSION;
+	
+	private final ModMetadata md = new ModMetadata();
+	
+	public ModContainerLuckyCoins()
+	{
+		md.autogenerated = true;
+		md.modId = REF_MOD_ID;
+		md.name = REF_MOD_NAME;
+		md.version = REF_VERSION;
+		md.credits = "";
+		md.authorList = Arrays.asList("CatDany");
+	}
+	
+	@Override
+	public String getModId()
+	{
+		return REF_MOD_ID;
+	}
+	
+	@Override
+	public String getName()
+	{
+		return REF_MOD_NAME;
+	}
+	
+	@Override
+	public String getVersion()
+	{
+		return REF_VERSION;
+	}
+	
+	@Override
+	public String getDisplayVersion()
+	{
+		return REF_VERSION;
+	}
+	
+	@Override
+	public ModMetadata getMetadata()
+	{
+		return md;
+	}
+	
+	@Override
+	public boolean registerBus(EventBus bus, LoadController controller)
+	{
+		bus.register(this);
+		return true;
+	}
+	
+	@Override
+	public String getAccessTransformerClass()
+	{
+		return CLASS_ACCESS_TRANSFORMERS;
+	}
+	
+	@Override
+	public String[] getASMTransformerClass()
+	{
+		return new String[] {CLASS_ACCESS_TRANSFORMERS};
+	}
+	
+	@Override
+	public String getModContainerClass()
+	{
+		return CLASS_MOD_CONTAINER;
+	}
+	
+	@Override
+	public String getSetupClass()
+	{
+		return null;
+	}
+	
+	@Override
+	public void injectData(Map<String, Object> data) {}
+}
